--- a/package.json
+++ b/package.json
@@ -2,31 +2,32 @@
   "name": "LeapGrad-Challenge",
   "version": "1.0.0",
   "description": "Interview challenge completed for LeapGrad for summer 2021",
-  "main": "index.js",
+  "main": "server.js",
   "repository": "https://github.com/camfairchild/LeapGrad-Challenge.git",
   "author": "Cameron Fairchild <cameron@fairchild.dev>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-		"start": "node server.js",
-		"test": "NODE_ENV=test mocha test/*.js --timeout 120000 --exit"
-	},
-	"dependencies": {
-		"dotenv": "^8.2.0",
-    "passport-http": "^0.3.0",
+    "start": "node server.js",
+    "test": "mocha test/*.js --timeout 120000 --exit"
+  },
+  "dependencies": {
     "bcrypt": "^5.0.1",
-		"express": "^4.17.1",
-		"mongoose": "^5.12.3",
-		"socket.io": "^4.0.1",
-		"yarn": "^1.22.10"
-	},
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.3",
+    "passport-http": "^0.3.0",
+    "socket.io": "^4.0.1",
+    "yarn": "^1.22.10"
+  },
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "mocha": "^8.3.2",
-    "socket.io-client": "^4.0.1",
-    "mockgoose": "^8.0.4"
+    "mockgoose": "^8.0.4",
+    "socket.io-client": "^4.0.1"
   },
-	"engines": {
-		"node": "^15.11.0"
-	}
+  "engines": {
+    "node": "^15.11.0"
+  }
 }
