--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "mocha": "^8.3.2",
-    "mockgoose": "^8.0.4",
+    "mongodb-memory-server": "^6.9.6",
     "socket.io-client": "^4.0.1"
   },
   "engines": {
