--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^8.3.2",
     "socket.io-client": "^4.0.1"
   },
