--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
+    "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "socket.io": "^4.0.1",
     "yarn": "^1.22.10"
