--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "passport": "^0.4.1",
-    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.0.1",
     "yarn": "^1.22.10"
   },
