--- a/package.json
+++ b/package.json
@@ -8,25 +8,26 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "test": "SET NODE_ENV=test & mocha test/*.js --timeout 60000 --exit"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "test": "cross-env NODE_ENV=test mocha test/*.js --timeout 60000 --exit"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.0.1",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
     "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
     "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
     "mocha": "^8.3.2",
     "socket.io-client": "^4.0.1"
   },
